fix deposit and withdrawal bugs, fix PUT requests in swagger
